
  - ``AppleScriptKit``
  - ``AppKitScripting``
  - ``Automator``
  - ``CoreData``
  - ``DiscRecording``
  - ``DiscRecordingUI``
  - ``QTKit``
  - ``SyncServices``
  - ``XgridFoundation``

  Documentation and tests not yet written.

- Add a CoreData example: a python version of the OutlineEditor example
  from Apple.

  TODO: compile the .xcdatamodel file.

- More conveniences for ``list``-like and ``dict``-like
  objects: ``__reversed__``, ``reverse``, ``pop``,
  ``remove``, ``fromkeys``.

- ``OC_PythonDictionary`` and ``OC_PythonArray`` now return
  ``NSNull`` as appropriate.

- New ``WebKitInterpreter`` example in ``Examples/Plugins``,
  Uses the new WebKit Cocoa plugin API available in Safari 1.3
  and later to embed a PyInterpreter in the browser.

- Fixed a ``CFBundleRef`` reference counting bug in
  Foundation._Foundation.  Symptom of this is usually crashing
  after having loaded a PyObjC-based plugin into an Obj-C app.

- New ``PyObjCTools.AppHelper`` functions: ``callAfter`` and
  ``callLater``, conveniences for calling Python functions on
  the main thread as soon as possible, or after a delay.

- Twisted examples changed to use ``threadedselectreactor``
  instead of ``cfreactor``.  ``cfreactor`` is deprecated.
  Needs Twisted newer than 2.0 (currently svn r13575 or later).

- ``objc.inject`` now injects on main thread by default,
  takes third useMainThread argument to change this behavior.
  Effectively a complete rewrite which should be more correct
  and stable, also synchronized with mach_* 1.1.
  XXX: Still doesn't work with Darwin 8!

- Removed NSAutoreleasePool category hack that has been deprecated for
  quite some time.

- New ``objc.removeAutoreleasePool`` function that will remove
  PyObjC's global NSAutoreleasePool, which is particularly useful
  for plugins.

- Fixed bug in the NSBundle hack that caused a NULL pointer to be
  dereferenced if looking up a non-existent class using NSBundle API.
